--- a/Verkefni-5/index.html
+++ b/Verkefni-5/index.html
@@ -11,30 +11,30 @@
       <div class="cards">
 
         <section class="card">
-          <h2>Lorem ipsum</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Lorem ipsum</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquam justo ac semper pharetra. Sed eu libero nec felis eleifend venenatis eu ac urna. Praesent pretium nisi scelerisque nibh accumsan tempus.</p>
             </div>
           </div>
         </section>
 
         <section class="card">
-          <h2>Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Aliquam erat volutpat in dignissim id sagittis nec leo</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
             </div>
             <div>
-              <img src="img.jpg">
+              <img class="card__img" src="img.jpg">
             </div>
           </div>
         </section>
 
         <section class="card">
-          <h2>Loremipsumdolorsitametconsecteturadipiscingelit</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Loremipsumdolorsitametconsecteturadipiscingelit</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing elit</a>. Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelitvestibulumtempusmaurisvestibulumtempusmauris.</p>
               <p>Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
@@ -43,45 +43,45 @@
         </section>
 
         <section class="card">
-          <h2>Proin dui leo</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Proin dui leo</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
               <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing elit</a>. Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
             </div>
             <div>
-              <img src="img.jpg">
+              <img class="card__img" src="img.jpg">
             </div>
           </div>
         </section>
 
         <section class="card">
-          <h2>Lorem ipsum</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Lorem ipsum</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquam justo ac semper pharetra. Sed eu libero nec felis eleifend venenatis eu ac urna. Praesent pretium nisi scelerisque nibh accumsan tempus.</p>
             </div>
           </div>
-          <ul>
+          <ul class="card__list">
             <li>lorem</li>
             <li>ipsum</li>
           </ul>
         </section>
 
         <section class="card">
-          <h2>Lorem ipsum</h2>
-          <div>
-            <div>
+          <h2 class="card__title">Lorem ipsum</h2>
+          <div class="card__content">
+            <div class="card__text">
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
               <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipiscing elit</a>. Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris.</p>
               <p>Pellentesque sem lectus, posuere in dignissim id, sagittis nec leo. Aliquam erat volutpat. Proin dui leo, maximus sed odio et, vestibulum tempus mauris. Loremipsumdolorsitametconsecteturadipiscingelit.</p>
             </div>
             <div>
-              <img src="img.jpg">
+              <img class="card__img" src="img.jpg">
             </div>
           </div>
-          <ul>
+          <ul class="card__list">
             <li>lorem</li>
             <li>ipsum</li>
             <li>dolor</li>
